# py-cmodule-demo

./: .gitignore  README.md  setup.py
demo/: __init__.py
mymath/: CMakeLists.txt  mymath.c
